--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.475.0",
-    "next": "14.2.4",
+    "next": "^15.4.6",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-day-picker": "^9.8.1",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
